# fastapi-template

./: .env_template  .gitignore  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 75f9578d18a9_create_user_model.py  d37b20ce18ae_create_access_token_table.py  e5345005fb1e_init.py
src/: app.py  config.py
src/api/: __init__.py  auth_pages.py  users.py
src/core/: auth.py
src/core/db/: __init__.py  models.py
src/db/: __init__.py  models.py  repo.py
src/users/: __init__.py  depends.py  manager.py  models.py
src/utils/: templates.py
src/utils/email/: __init__.py  config.py
templates/: forgot.html
templates/email/: base.html  forgot.html  forgot_mail.html  verify.html  verify_mail.html
